# msqlite

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: tests.yml
msqlite/: msqlite.py
scripts/: blackify.bat  coverage.bat  make_venv_dev.bat  pypi.bat  run_claude.bat  run_flake8.bat  run_mypy.bat
src/msqlite/: __init__.py  msqlite.py
test_msqlite/: conftest.py  paths.py  test_artificial_delay.py  test_context_manager.py  test_example.py  test_indexes.py  test_json.py  test_json_parameters.py  test_max_retries.py  test_msqlite.py  test_no_schema.py  test_retries.py  test_schema_error.py
